--- a/gb/18/11/8/n10837359.md
+++ b/gb/18/11/8/n10837359.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ojaqxe3952/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ojaqxe3952/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ojaqxe3952/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ojaqxe3952/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ojaqxe3952/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ojaqxe3952/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ojaqxe3952/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ojaqxe3952/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ojaqxe3952/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ojaqxe3952/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ojaqxe3952/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ojaqxe3952/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ojaqxe3952/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ojaqxe3952/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ojaqxe3952/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ojaqxe3952/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ojaqxe3952/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ojaqxe3952/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ojaqxe3952/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ojaqxe3952/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ojaqxe3952/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ojaqxe3952/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ojaqxe3952/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ojaqxe3952/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ojaqxe3952/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ojaqxe3952/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ojaqxe3952/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ojaqxe3952/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ojaqxe3952/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ojaqxe3952/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ojaqxe3952/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ojaqxe3952/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ojaqxe3952/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ojaqxe3952/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ojaqxe3952/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ojaqxe3952/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ojaqxe3952/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>获奖纪录片再临悉尼 引各界思考行动</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/11/57aff29deee392838a98b3437862db24-600x400.jpg" />
 <h6>11月1日晚，《假孔子之名》继6月在新州议会首映后，在悉尼市中心的米切尔剧场（Mitchell Theatre）再次举行放映会，当晚放映厅座无虚席。（李睿／大纪元）
 </h6>
 <hr>
 <p>【大纪元2018年11月08日讯】（大纪元记者安平雅悉尼报导）一部获得世界十余奖项的纪录片，引发了西方主流社会对教育领域内出现的一个特殊现象的关注与思考，越来越多的人也开始寻找针对于此的解决之道。</p>
-<p>11月1日晚，《<ahref="https://github.com/ojaqxe3952/djy/blob/master/gb/tag/%E5%81%87%E5%AD%94%E5%AD%90%E4%B9%8B%E5%90%8D.md#1">假孔子之名</a>》继6月在<ahref="https://github.com/ojaqxe3952/djy/blob/master/gb/tag/%E6%96%B0%E5%B7%9E%E8%AE%AE%E4%BC%9A.md#1">新州议会</a>首映后，在悉尼市中心的米切尔剧场（Mitchell Theatre）再次举行放映会，当晚放映厅座无虚席。</p>
-<p>《<ahref="https://github.com/ojaqxe3952/djy/blob/master/gb/tag/%E5%81%87%E5%AD%94%E5%AD%90%E4%B9%8B%E5%90%8D.md#1">假孔子之名</a>》是加拿大华裔导演秋旻历时三年完成的调查类<ahref="https://github.com/ojaqxe3952/djy/blob/master/gb/tag/%E8%AE%B0%E5%BD%95%E7%89%87.md#1">记录片</a>。影片以一名前孔子学院教师赵琪女士的真实经历，揭露了中共利用“孔子学院”向西方国家输出共产意识形态，从学术界进行渗透的方式。该片荣获2017年“<ahref="https://github.com/ojaqxe3952/djy/blob/master/gb/tag/%E7%8B%AC%E7%AB%8B%E5%88%B6%E4%BD%9C%E5%BD%B1%E5%B1%95.md#1">独立制作影展</a>”（IndieFEST Award）杰出记录片奖等十余个奖项。</p>
-<p>当晚影片结束后的问答环节中，四位嘉宾与观众就孔子学院对西方社会的侵蚀现况及如何应对进行了探讨。四位嘉宾分别是西藏议会澳洲分部的会长Kyinzom Dhongdue、<ahref="https://github.com/ojaqxe3952/djy/blob/master/gb/tag/%E6%82%89%E5%B0%BC%E7%A7%91%E6%8A%80%E5%A4%A7%E5%AD%A6.md#1">悉尼科技大学</a>冯崇义教授、麦觉理大学讲师、中国问题研究学者卡里科博士（Dr Kevin Carrico）及前中共领馆官员陈用林。</p>
-<figure id="attachment_10837391" aria-describedby="caption-attachment-10837391" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2018/11/acbbba84b3e499ffe43a4ad0495641cc.jpg"><img class="wp-image-10837391 size-large" src="https://i.epochtimes.com/assets/uploads/2018/11/acbbba84b3e499ffe43a4ad0495641cc-600x340.jpg" alt="" width="600" b="340" /></a><figcaption id="caption-attachment-10837391" class="wp-caption-text">参加《假孔子之名》11月1日放映会的嘉宾。从左至右分别为：西藏议会澳洲分部的会长Kyinzom Dhongdue、<ahref="https://github.com/ojaqxe3952/djy/blob/master/gb/tag/%E6%82%89%E5%B0%BC%E7%A7%91%E6%8A%80%E5%A4%A7%E5%AD%A6.md#1">悉尼科技大学</a>冯崇义教授、麦觉理大学讲师、中国问题研究学者卡里科博士。（徐正浩／大纪元）</figcaption></figure>
+<p>11月1日晚，《<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%81%87%E5%AD%94%E5%AD%90%E4%B9%8B%E5%90%8D.md#1">假孔子之名</a>》继6月在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%96%B0%E5%B7%9E%E8%AE%AE%E4%BC%9A.md#1">新州议会</a>首映后，在悉尼市中心的米切尔剧场（Mitchell Theatre）再次举行放映会，当晚放映厅座无虚席。</p>
+<p>《<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%81%87%E5%AD%94%E5%AD%90%E4%B9%8B%E5%90%8D.md#1">假孔子之名</a>》是加拿大华裔导演秋旻历时三年完成的调查类<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%AE%B0%E5%BD%95%E7%89%87.md#1">记录片</a>。影片以一名前孔子学院教师赵琪女士的真实经历，揭露了中共利用“孔子学院”向西方国家输出共产意识形态，从学术界进行渗透的方式。该片荣获2017年“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%8B%AC%E7%AB%8B%E5%88%B6%E4%BD%9C%E5%BD%B1%E5%B1%95.md#1">独立制作影展</a>”（IndieFEST Award）杰出记录片奖等十余个奖项。</p>
+<p>当晚影片结束后的问答环节中，四位嘉宾与观众就孔子学院对西方社会的侵蚀现况及如何应对进行了探讨。四位嘉宾分别是西藏议会澳洲分部的会长Kyinzom Dhongdue、<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%82%89%E5%B0%BC%E7%A7%91%E6%8A%80%E5%A4%A7%E5%AD%A6.md#1">悉尼科技大学</a>冯崇义教授、麦觉理大学讲师、中国问题研究学者卡里科博士（Dr Kevin Carrico）及前中共领馆官员陈用林。</p>
+<figure id="attachment_10837391" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2018/11/acbbba84b3e499ffe43a4ad0495641cc.jpg"><img class="wp-image-10837391 size-large" src="https://i.epochtimes.com/assets/uploads/2018/11/acbbba84b3e499ffe43a4ad0495641cc-600x340.jpg" alt="" width="600" b="340" /></a><figcaption class="wp-caption-text">参加《假孔子之名》11月1日放映会的嘉宾。从左至右分别为：西藏议会澳洲分部的会长Kyinzom Dhongdue、<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%82%89%E5%B0%BC%E7%A7%91%E6%8A%80%E5%A4%A7%E5%AD%A6.md#1">悉尼科技大学</a>冯崇义教授、麦觉理大学讲师、中国问题研究学者卡里科博士。（徐正浩／大纪元）</figcaption></figure>
 <h2><strong>中共斥巨资推销孔子学院</strong><strong>目的何在？</strong></h2>
 <p>有现场观众表示，他看到中共汉办的报告称，全球一千多间孔子学院及孔子课堂主要集中在欧洲、美国、加拿大、澳大利亚及新西兰等西方发达国家。因此他对中共花费大量金钱资助这些国家的教育系统感到疑惑。</p>
 <p>陈用林表示，中共自2004年开始，将孔子学院作为其全球战略的一部分花费了很多金钱及气力在全世界推销。但中国仍有超过4000万的贫困人口，这些家庭的孩子无法完成小学教育。但中共花费在海外孔子学院项目上约为10亿澳元。</p>
@@ -18,7 +18,7 @@
 <p>麦觉理大学讲师卡里科博士表示，西方教育系统会遇到资金被削减的情况，导致学校对外来资金采取开放的态度。问题是，与中共有直接关系的汉办的资金进入了大学、进入了很多中小学，中共践踏人权的可怕政策带到了我们的教育系统中、政府中，这是不合理的，应该被停止。</p>
 <p>冯崇义教授表示，“孔子学院与澳洲大学的价值观是相抵触的，澳洲大学支持学术研究自由，但孔子学院奉行的是执行中共的任务。”</p>
 <h2><strong>新州政府已采取措施</strong><strong>应对中共影响力</strong></h2>
-<p>自今年6月7日晚，《假孔子之名》在<ahref="https://github.com/ojaqxe3952/djy/blob/master/gb/tag/%E6%96%B0%E5%B7%9E%E8%AE%AE%E4%BC%9A.md#1">新州议会</a>举行了澳洲首映式后，新州政府已开始关注到中共藉孔子学院实施影响力的现象，并采取了行动。</p>
+<p>自今年6月7日晚，《假孔子之名》在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%96%B0%E5%B7%9E%E8%AE%AE%E4%BC%9A.md#1">新州议会</a>举行了澳洲首映式后，新州政府已开始关注到中共藉孔子学院实施影响力的现象，并采取了行动。</p>
 <p>冯教授说：“大约十天前，我与教育厅长的一次私人谈话中，厅长告诉我新州的孔子课堂无限期暂停。”</p>
 <p>今年6月11日，新州教育厅长斯托克斯（Rob Stokes）表示，由于担心潜在的“外国影响”，正在审查这个所谓教授中文和文化课程的教学计划。</p>
 <p>教育厅长表示， “之所以审查是因为对运作于新州教育厅的孔子学院的独立性和透明度存有担忧。”</p>
@@ -36,47 +36,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/18/6/8/n10466395.md#1">《假孔子之名》澳新州议会放映 揭中共渗透</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/18/6/12/n10477070.md#1">澳新州教育厅长：孔子课堂恐被关闭</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/18/10/25/n10807301.md#1">《假孔子之名》墨尔本再放映 聚焦中共统战</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/26/n13115720.md#1">澳洲拟立法严惩剥削移民工行为</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/26/n13115698.md#1">员工确诊 悉尼西南区Bankstown一养老院被封锁</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/26/n13115684.md#1">2032年奥运会将促进昆州经济</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/26/n13115687.md#1">澳洲国会大厦将对公众关闭一个月</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/26/n13115644.md#1">“昔日价值观不再” 昆州前州长宣布退出联盟党</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/26/n13115610.md#1">CommSec：塔州经济连续六个季度位居全澳第一</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/26/n13115271.md#1">联邦已发逾70万笔疫情补贴 财长回绝重启Jobkeeper</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/8/n10466395.md#1">《假孔子之名》澳新州议会放映 揭中共渗透</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/12/n10477070.md#1">澳新州教育厅长：孔子课堂恐被关闭</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/25/n10807301.md#1">《假孔子之名》墨尔本再放映 聚焦中共统战</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947011.md#1">澳新州参议员感染武汉肺炎 第三位政治家确诊</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947001.md#1">两超市限购更多商品 鸡蛋冷冻食品每人两份</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946995.md#1">悉尼双挂车撞桥墩一男亡 交通阻塞25公里</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946975.md#1">澳维州一日增23例武肺 NAB总部大楼疏散</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946662.md#1">澳洲科学家率先发现人体抵御武汉肺炎奥秘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946595.md#1">担忧疫情蔓延 四州澳纽军团日纪念活动取消</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946553.md#1">疫情致需求锐减 澳航将取消90%国际航班</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ojaqxe3952/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/1/n10885699.md#1" target="_blank">陆文：生与死的抉择</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/2/n9691133.md#1" target="_blank">从上海到巴黎 前国企高管的坚守之路</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/6/n9809482.md#1" target="_blank">吐斯廉博物馆告诉世界：柬埔寨发生过什么</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/5/13/n7891043.md#1" target="_blank">永恒的感恩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/20/n13102389.md#1">【未解之谜】预言家凯西：我曾是亚特兰蒂斯人</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/12/n13083124.md#1">对于邪灵“附体” 东西方文化如何对待？</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/12/n13083162.md#1">苏东坡一身忠直正气 自述多次与鬼神谈判</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/9/n13079158.md#1">【忽必烈传】马可眼中的皇帝与大元帝国</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/21/n13104808.md#1">欧阳修一生奇遇多 常怀疑自己本是世外之人</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/23/n13110632.md#1">【时事军事】中印边境续对峙 共军暴露军事劣势</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/24/n13111358.md#1">【小宇宙传说】时空穿越 他从1952来到2006年</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/24/n13112702.md#1">【马克时空】波音CST-100星际航线 将于7月30日升空</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/24/n13112629.md#1">台风烟花路径奇异 避开台湾直扑上海浙江</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/24/n13111538.md#1">腾讯直播奥运开幕式切掉中国队进场 网民崩溃</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/24/n13112498.md#1">【一线采访】被拦隧道内 一车三人死里逃生</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/23/n13110984.md#1">吴宗宪接种第一剂疫苗 自曝隔天出现副作用</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/23/n13110829.md#1">《时代革命》团队宣布：影片版权已转到海外</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/24/n13111732.md#1">篠原凉子与市村正亲离婚 两儿监护权归父亲</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/23/n13108910.md#1">东京奥运今晚开幕 MISIA为开幕式领唱日本国歌</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/24/n13111390.md#1">《恋人的最后情书》影评：相隔几十年的恋情 也能同时开花结果</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/21/n13105343.md#1">蔬菜别直接放冰箱！专家：这样保存最长久</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/22/n13108194.md#1">三高者易得肾脏病？营养师教你护肾饮食法</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/24/n13112330.md#1">高端疫苗安全和保护力未明 专家：施打或仍有2好处</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/25/n13113232.md#1">被野熊纠缠7天 美国男子在屋顶写SOS获救</a></li>
-<li><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/21/7/25/n13113601.md#1">为了保护10岁小主人 加拿大小狗被土狼咬伤</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ojaqxe3952/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ojaqxe3952/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/11/8/n10837359.htm">获奖纪录片再临悉尼 引各界思考行动</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/11/8/n10837359.htm">获奖纪录片再临悉尼 引各界思考行动</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ojaqxe3952/djy/blob/master/gb/18/11/8/n10837359.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ojaqxe3952/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ojaqxe3952/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ojaqxe3952/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ojaqxe3952/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ojaqxe3952/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ojaqxe3952/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ojaqxe3952/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ojaqxe3952/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ojaqxe3952/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ojaqxe3952/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ojaqxe3952/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ojaqxe3952/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ojaqxe3952/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ojaqxe3952/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ojaqxe3952/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ojaqxe3952/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ojaqxe3952/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ojaqxe3952/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ojaqxe3952/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ojaqxe3952/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ojaqxe3952/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ojaqxe3952/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ojaqxe3952/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ojaqxe3952/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ojaqxe3952/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ojaqxe3952/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ojaqxe3952/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/18/11/8/n10837359.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
